--- a/templates/index.html
+++ b/templates/index.html
@@ -436,7 +436,7 @@
                     </button>
 
                     <div class="card-footer">
-                        <p>2024 © Ziad Elsayed - Nader Hany - Mustafa </p>
+                        <p>2024 © Ziad Elsayed - Nader Hany - Mustafa Esmail </p>
                     </div>
                     <!-- <ul>
                             {% for key, value in options.options.items() %}
