--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,129 +7,209 @@
     <title>Admin Form</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #a1aeb1dc;
+        }
+        h1{
+            color: #085c6b;
+        }
+        .form-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .custom-checkbox .custom-control-label::before {
+            background-color: #ffffff;
+        }
+        .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+            background-color: #007bff;
+        }
+        .header-image {
+            width: 100%;
+            height: 250px;
+            border-radius: 8px 8px 0 0;
+        }
+        .card-footer {
+            background-color: rgba(255, 255, 255, 0.5);
+        }
+    </style>
 </head>
 
 <body>
     <div class="container mt-5">
-        <h1>Admin Form</h1>
-        <form id="adminForm" class="p-4">
-            <div class="form-group">
-                <label for="formname">Name:</label>
-                <input type="text" class="form-control" id="formname" name="name" required>
-            </div>
-            <label>Options:</label><br>
+        <div class="form-container">
+            <h1 class="text-center mb-4">Admin Form</h1>
+            <img src="../static/assets/images/ai3.jpg" class="header-image" alt="Header Image">
+            <form id="adminForm">
+                <div class="form-group">
+                    <label for="formname">Name:</label>
+                    <input type="text" class="form-control" id="formname" name="name" required>
+                </div>
+                <fieldset>
+                    <legend>Options:</legend>
+                    <div class="row mb-3">
+                        <div class="custom-control custom-checkbox col-12">
+                            <input type="checkbox" class="custom-control-input" id="select-all">
+                            <label class="custom-control-label" for="select-all">Select All</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="full-name" name="full-name">
+                                <label class="custom-control-label" for="full-name">Full Name</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="phone1" name="phone1">
+                                <label class="custom-control-label" for="phone1">Phone1</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="phone2" name="phone2">
+                                <label class="custom-control-label" for="phone2">Phone2</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="language" name="language">
+                                <label class="custom-control-label" for="language">Language</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="language2">
+                                <label class="custom-control-label" for="language2">Language2</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="mail">
+                                <label class="custom-control-label" for="mail">Mail</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="date">
+                                <label class="custom-control-label" for="date">Date</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="gradst">
+                                <label class="custom-control-label" for="gradst">Graduation Status</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="university">
+                                <label class="custom-control-label" for="university">University</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="major">
+                                <label class="custom-control-label" for="major">Major</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="address1">
+                                <label class="custom-control-label" for="address1">Address1</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="address2">
+                                <label class="custom-control-label" for="address2">Address2</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="civilst">
+                                <label class="custom-control-label" for="civilst">Civil status</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="religion">
+                                <label class="custom-control-label" for="religion">Religion</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="emergency">
+                                <label class="custom-control-label" for="emergency">Emergency</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="citizenship">
+                                <label class="custom-control-label" for="citizenship">Citizenship</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="gender">
+                                <label class="custom-control-label" for="gender">Gender</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="military">
+                                <label class="custom-control-label" for="military">Military</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="ccenter">
+                                <label class="custom-control-label" for="ccenter">ccenter</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="worklocation">
+                                <label class="custom-control-label" for="worklocation">Worklocation</label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="transport">
+                                <label class="custom-control-label" for="transport">Transport</label>
+                            </div>
+                        </div>
+                        <!-- Add more checkboxes as per your list -->
+                    </div>
+                </fieldset>
+                <div class="text-center mt-4">
+                    <button type="submit" class="btn btn-outline-info btn-block mb-4">Submit</button>
+                </div>
 
-            <br />
-            <div class="row">
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="full-name" name="full-name">
-                    <label class="custom-control-label" for="full-name">Full Name</label>
+                <div class="card-footer">
+                    <p>2024 © Ziad Elsayed - Nader Hany - Mustafa Esmail </p>
                 </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="phone1" name="phone1">
-                    <label class="custom-control-label" for="phone1">Phone1</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="phone2" name="phone2">
-                    <label class="custom-control-label" for="phone2">Phone2</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="language" name="language">
-                    <label class="custom-control-label" for="language">Language</label>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="language2">
-                    <label class="custom-control-label" for="language2">Language2</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="mail">
-                    <label class="custom-control-label" for="mail">Mail</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="date">
-                    <label class="custom-control-label" for="date">Date</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="gradst">
-                    <label class="custom-control-label" for="gradst">Graduation Status</label>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="university">
-                    <label class="custom-control-label" for="university">University</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="major">
-                    <label class="custom-control-label" for="major">Major</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="address1">
-                    <label class="custom-control-label" for="address1">Address1</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="address2">
-                    <label class="custom-control-label" for="address2">Address2</label>
-                </div>
-            </div>
-
-
-            <div class="row">
-
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="civilst">
-                    <label class="custom-control-label" for="civilst">Civil status</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="religion">
-                    <label class="custom-control-label" for="religion">Religion</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="emergency">
-                    <label class="custom-control-label" for="emergency">Emergency</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="citizenship">
-                    <label class="custom-control-label" for="citizenship">Citizenship</label>
-                </div>
-            </div>
-
-
-            <div class=" row ">
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="gender">
-                    <label class="custom-control-label" for="gender">Gender</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="military">
-                    <label class="custom-control-label" for="military">Military</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="ccenter">
-                    <label class="custom-control-label" for="ccenter">ccenter</label>
-                </div>
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="worklocation">
-                    <label class="custom-control-label" for="worklocation">Worklocation</label>
-                </div>
-
-                <div class="custom-control custom-checkbox col-3">
-                    <input type="checkbox" class="custom-control-input" id="transport">
-                    <label class="custom-control-label" for="transport">Transport</label>
-                </div>
-                <!-- Add more checkboxes as per your list -->
-            </div>
-            <button type="submit" class="btn btn-primary mt-2">Submit</button>
-        </form>
-
+            </form>
+        </div>
     </div>
 
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    <script src="../static/js/admin.js"></script>
 </body>
-
-<script src="../static/js/admin.js"></script>
 
 </html>
