Applied enhancement on the color scheme

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,6 +14,15 @@
 
         h1 {
             color: #085c6b;
+            font-size: 2.5rem;
+            /* Adjust font size for larger screens */
+        }
+
+        @media (max-width: 576px) {
+            h1 {
+                font-size: 1.8rem;
+                /* Smaller font size for mobile screens */
+            }
         }
 
         .form-container {
@@ -31,10 +40,26 @@
             background-color: #007bff;
         }
 
-        .header-image {
+        .header-container {
             width: 100%;
-            height: 250px;
-            border-radius: 8px 8px 0 0;
+            /* Adjust width as needed */
+            height: 200px;
+            /* Set the height you want to show */
+            overflow: hidden;
+            /* Hide the overflow */
+            position: relative;
+            /* Position relative for absolute positioning of the image */
+        }
+
+        .header-image {
+            position: absolute;
+            /* Allows us to position the image */
+            top: -50px;
+            /* Adjust the top position to crop the image */
+            left: 0;
+            /* Align the image to the left */
+            width: 100%;
+            /* Ensure the image covers the entire width */
         }
 
         .card-footer {
@@ -64,12 +89,14 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8 form-container">
-                <a href="{{ url_for('dashboard') }}" class="gradient-btn">Go to Dashboard</a>
-                <h1 class="text-center mb-4">Admin Form</h1>
-                <img src="../static/assets/images/header2.jpg" class="header-image" alt="Header Image">
+                <a href="{{ url_for('dashboard') }}" class="btn btn-primary btn-block gradient-btn mb-3">Go to Dashboard</a>
+                <h1 class="text-center mb-4 ">Admin Form</h1>
+                <div class="header-container">
+                    <img src="../static/assets/images/header2.jpg" class="header-image" alt="Header Image">
+                </div>
                 <form id="adminForm">
                     <div class="form-group">
-                        <label for="formname">Name:</label>
+                        <label for="formname" class="h5 mt-3">Name:</label>
                         <input type="text" class="form-control" id="formname" name="name" required>
                     </div>
                     <fieldset>
