--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Form</title>
+    <link rel="icon" type="image" href="../static/assets/images/logo.png" />
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -37,6 +38,7 @@
         }
         .header-image {
             width: 100%;
+            height: 15%;
             border-radius: 8px 8px 0 0;
         }
 
@@ -52,7 +54,7 @@
             <div class="col-md-8 col-sm-12 form-container"> <!-- Add col-sm-12 for small devices -->
                 <h1 id="formname" class="text-center mt-3">Name</h1>
                 
-                <img src="../static/assets/images/header.png" class="header-image" alt="Header Image">
+                <img src="../static/assets/images/header3.png" class="header-image" alt="Header Image">
                 <h2 class="text-center mt-3">Apply now</h2>
                 <form id="your-form-id">
 
