--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Form</title>
-    <link rel="icon" type="image" href="../static/assets/images/logo.png" />
+    <link rel="icon" type="image" href="../static/assets/images/logo.png">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
             background: linear-gradient(135deg, #6a11cb 25%, #2575fc 50%, #ff6f91 75%, #f9b24e 100%);
+            min-height: 100vh;
         }
 
         h1 {
@@ -31,6 +33,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            height: 50%;
         }
 
         .custom-checkbox .custom-control-label::before {
@@ -44,7 +47,7 @@
         .header-container {
             background-color: white;
             width: 100%;
-            height: 22%;
+            height: 30vh;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -91,7 +94,7 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8 form-container">
+            <div class="col-md-10 form-container">
                 <a href="{{ url_for('dashboard') }}" class="btn btn-primary btn-block gradient-btn mb-3">Go to
                     Dashboard</a>
                 <h1 class="text-center mb-4 ">Admin Form</h1>
