add clear func. for clearing the form after submitting

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                 /* Smaller font size for mobile screens */
             }
         }
+        
 
         .form-container {
             background-color: white;
@@ -30,16 +31,33 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
+        .container{
+            margin-top: 80px;
+        }
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .form-container {
-                padding: 15px;
+                top:4px;
+                padding: 8px;
+                margin: 5px;
+
+            }
+            .container{
+                margin: 0 0 8px;
             }
         }
         .header-image {
             width: 100%;
             height: 15%;
             border-radius: 8px 8px 0 0;
+        }
+        @media (max-width: 768px) {
+            .header-image {
+            width: 100%;
+            height: 25vh;
+            border-radius: 8px 8px 0 0;
+        }
         }
 
         .card-footer {
@@ -49,7 +67,7 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 col-sm-12 form-container"> <!-- Add col-sm-12 for small devices -->
                 <h1 id="formname" class="text-center mt-3">Name</h1>
