--- a/templates/admin.html
+++ b/templates/admin.html
@@ -81,11 +81,15 @@
             border-radius: 5px;
             text-decoration: none;
             display: inline-block;
-            transition: background 0.3s ease;
+            transition: background 2s ease-in, color 2s ease-in;
+            border: none;
+            /* No border */
         }
 
         .gradient-btn:hover {
             background: linear-gradient(45deg, #ff6f91, #f9b24e, #6a11cb);
+            color: white;
+            /* Text color on hover */
             text-decoration: none;
         }
     </style>
